started projects page add bootstrap

--- a/src/app.css
+++ b/src/app.css
@@ -11,10 +11,21 @@
 	box-sizing: border-box;
 }
 
+.github-link {
+	color: white;
+
+}
+
 html, body {
 	padding: 0;
 	margin: 0;
 	color: white;
+	font-family: Raleway !important;
+}
+
+#mid-section {
+	/*border: 2px solid red;*/
+	height: 400px;
 }
 
 .nav-links {
@@ -27,10 +38,10 @@ html, body {
 }
 
 #explore-link {
+	color: white;
 	font-size: 35px;
 	border-bottom: 4px solid cyan;
-	padding: 0 15px;
-	padding-bottom: 5px;
+	padding: 10px 15px;
 }
 
 #explore-link:hover {
@@ -57,6 +68,17 @@ html, body {
 	text-align: center;
 }
 
+#section1 {
+	/*border: 2px solid blue;*/
+	margin: 0 auto;
+	height: 100vh;
+	color: white;
+}
+
+.project-page-intro {
+	/*border: 2px solid yellow;*/
+	height: 500px;
+}
 
 
 #nav-container {
@@ -68,8 +90,12 @@ html, body {
 }
 
 #full {
-	border: 2px solid red;
-	height: 2000px;
+	/*border: 2px solid red;*/
+	height: 4000px;
+	 background-attachment: fixed;
+   background-position: center;
+   background-repeat: no-repeat;
+   background-size: cover;
 }
 
 .h2 {
@@ -83,6 +109,45 @@ html, body {
 	/*border: 2px solid red;*/
 	text-align: center;
 }
+
+
+.col-md-6.main {
+	/*border: 2px solid red;*/
+	height: 100vh;
+}
+
+#section2 {
+    /* RGBa with 0.6 opacity */
+    background-color: rgba(0, 188, 212, 0.6);
+
+    /* For IE 5.5 - 7*/
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000);
+    /* For IE 8*/
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)"
+}
+
+.thumbnail {
+	margin: 0% auto;
+	margin-top: 20px;
+	border-style: none;
+	width: 90%;
+}
+
+.row .thumbnail {
+    border:0;
+    box-shadow:0;
+    border-radius:0;
+}
+
+#right-side {
+	background-color: rgba(255, 255, 255, 1);
+}
+
+img {
+	border: none;
+}
+
+
 
 .work-intro-content {
 	color: white;
@@ -109,6 +174,12 @@ h1 {
 	padding-bottom: 30px;
 }
 
+#top-half-nav {
+	margin-top: 20%;
+	/*border: 2px solid red;*/
+	margin-right: 4%;
+}
+
 .home-content {
 	/*border: 2px solid red;*/
 	margin-top: 2%;
@@ -119,19 +190,17 @@ h1 {
 
 #nav-page-content {
 	/*border: 2px solid blue;*/
-	margin-top: 19%;
-
 }
 
 #nav-page-social-links {
 	font-size: 25px;
 	text-align: center;
-	margin-top: 27%;
+	margin-top: 20%;
 }
 
 #nav-page-links {
 	margin-top: 20%;
-	border: 2px solid blue;
+	/*border: 2px solid blue;*/
 }
 
 #nav-container {
@@ -143,14 +212,15 @@ h1 {
 #modal-content {
 	/*border: 2px solid blue;*/
 	text-align: center;
-	margin: 5% auto;
+	margin: 17% auto;
 	padding: 0 20px;
+	margin-right: 5%;
 }
 
 #social-links {
 	/*border: 2px solid blue;*/
 	text-align: center;
-	margin: 25% auto;
+	margin: 22% auto;
 	font-size: 25px;
 }
 
@@ -169,7 +239,7 @@ h1 {
 
 #modal-full {
 	/*border: 2px solid blue;*/
-	height: 500px;
+	height: 750px;
 	/*width: 100%;*/
 }
 
@@ -191,7 +261,21 @@ h1 {
 	display: inline-block;
 }
 
+.modal-close {
+	position: absolute;
+	right: 0;
+	top: 0;
+}
 
+
+
+.sem-btn {
+	border: none;
+}
+
+.divider {
+	background-color: grey;
+}
 
 .app-modal {
 	position: absolute;
@@ -265,6 +349,6 @@ a:hover:after, a:focus:after, .active:after {
 .slide-appear.slide-appear-active {
   transform: translateX(0) !important;
   transition: transform .2s ease-out !important;
-  background: #0004ff;
   animation: width .2s;
+
 }
