--- a/src/app.css
+++ b/src/app.css
@@ -1,11 +1,12 @@
-#home-container {
+.home-container {
 	margin: 0;
 	padding: 0;
 	height: 100vh;
 	text-align: center;
+	width: 100vw;
 	color: white;
-	border: 2px solid black;
 }
+
 
 * {
 	box-sizing: border-box;
@@ -90,7 +91,7 @@ html, body {
 
 #full {
 	/*border: 2px solid red;*/
-	height: 4000px;
+	 height: 4100px;
 	 background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
@@ -109,17 +110,16 @@ html, body {
 	text-align: center;
 }
 
+#divide-section {
+	/*border: 2px solid green;*/
+	height: 150px;
 
-.col-md-6.main {
-	/*border: 2px solid red;*/
-	height: 100vh;
 }
 
 #section2 {
     /* RGBa with 0.6 opacity */
     background-color: rgba(0, 188, 212, 0.6);
-    border-bottom: 10px solid grey;
-    border-top: 10px solid grey;
+    /*border: 5px solid dodgerblue;*/
     /* For IE 5.5 - 7*/
     filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000);
     /* For IE 8*/
@@ -168,7 +168,6 @@ h1 {
 }
 
 #home-name-explore {
-	/*border: 2px solid red;*/
 	margin-top: 29%;
 	padding: 20px;
 	padding-bottom: 30px;
@@ -181,11 +180,8 @@ h1 {
 }
 
 .home-content {
-	/*border: 2px solid red;*/
 	margin-top: 2%;
 	display: inline-block;
-	width: 700px;
-	height: 500px;
 	font-style: italic;
 }
 
@@ -206,16 +202,16 @@ h1 {
 
 
 #modal-content {
-	/*border: 2px solid blue;*/
+	border: 2px solid blue;
 	text-align: center;
 	margin: 17% auto;
 	padding: 0 20px;
-	margin-right: 5%;
+	/*margin-right: 5%;*/
 	font-style: italic;
 }
 
 #social-links {
-	/*border: 2px solid blue;*/
+	border: 2px solid blue;
 	text-align: center;
 	margin: 22% auto;
 	font-size: 25px;
@@ -235,8 +231,8 @@ h1 {
 
 
 #modal-full {
-	/*border: 2px solid blue;*/
-	height: 750px;
+	border: 2px solid blue;
+	/*height: 750px;*/
 	/*width: 100%;*/
 }
 
@@ -275,6 +271,7 @@ h1 {
 }
 
 .app-modal {
+	z-index: 9999;
 	position: fixed;
 	right: 7px;
 	top: 7px;
