--- a/src/contact.css
+++ b/src/contact.css
@@ -5,19 +5,20 @@
 #header-contact {
 	font-family: Raleway;
 	/*border: 2px solid red;*/
-	width: 37%;
+	/*width: 37%;*/
 	margin: 0 auto;
-	/*margin-top: 10%;*/
-
 	font-size: 60px;
 	text-align: center;
 	border-bottom: 3px solid cyan;
-	padding: 0 20px;
 }
 
 #header-contact-container {
 	/*border: 2px solid blue;*/
 	margin-top: 15%;
+}
+
+#contact-main {
+	height: 100vh;
 }
 
 #contact-desc {
@@ -58,4 +59,45 @@
 
 .cyan {
 	color: cyan;
+}
+
+@media only screen and (max-width: 330px) {
+	h2#phone {
+		font-size: 18px;
+	}
+}
+
+@media only screen and (max-width: 550px) {
+    #social-links-contact {
+    	margin-top: 35px;
+    }
+
+    #header-contact-container {
+    	/*border: 2px solid red;*/
+    	margin-top: 25px;
+    }
+
+    #header-contact {
+    	font-size: 45px;
+    }
+
+    #phone {
+    	font-size: 25px;
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+    #phone {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-height: 690px) {
+    #phone {
+        width: 100%;
+    }
+
+    #contact-main {
+    	height: 750px;
+    }
 }
