--- a/src/about.css
+++ b/src/about.css
@@ -97,10 +97,16 @@
 	margin: 0 auto;
 }
 
+#first-img {
+	width: 450px;
+}
+
 .about-img-tag {
 	border: 4px solid grey;
 }
-
+#decorate {
+	border-bottom: 4px solid cyan;
+}
 .about-descr {
 	height: 50%;
 	padding: 20px;
@@ -118,8 +124,135 @@
 	margin-top: 50px;
 }
 
+
 .col-md-6 {
 	/*border: 2px solid blue;*/
+}
+
+@media only screen and (max-width: 993px) {
+	#empl-edu {
+		margin-top: 55%
+	}
+
+	#first-img {
+		width: 525px;
+	}
+
+	#main-about {
+		height: 3800px;
+	}
+
+	#empl-section1 {
+		border: 2px solid red;
+	}
+ 
+}
+
+@media only screen and (max-width: 920px) {
+	#empl-edu {
+		margin-top: 70%
+	}
+ 
+}
+
+@media only screen and (max-width: 744px) {
+	#empl-edu {
+		margin-top: 80%
+	}
+ 
+}
+
+@media only screen and (max-width: 690px) {
+	#empl-edu {
+		margin-top: 85%
+	}
+
+	h1#titlecontent.about-header {
+		padding-top: 0;
+		margin-bottom: 20%;
+	}
+ 
+}
+
+@media only screen and (max-width: 645px) {
+	#empl-edu {
+		margin-top: 95%
+	}
+
+	h1#titlecontent.about-header {
+		padding-top: 0;
+		margin-bottom: 20%;
+	}
+ 
+}
+
+@media only screen and (max-width: 550px) {
+	#empl-edu {
+		margin-top: 105%
+	}
+
+	h1#titlecontent.about-header {
+		padding-top: 0;
+		margin-bottom: 20%;
+	}
+ 
+}
+
+@media only screen and (max-width: 1205px) {
+	#first-img {
+		width: 520px;
+	}
+ 
+}
+
+@media only screen and (max-width: 500px) {
+	#empl-edu {
+		margin-top: 115%
+	}
+
+	h1#titlecontent.about-header {
+		padding-top: 0;
+		margin-bottom: 20%;
+	}
+
+	#main-about {
+		height: 4800px;
+	}
+ 
+}
+
+@media only screen and (max-width: 450px) {
+	#empl-edu {
+		margin-top: 135%
+	}
+
+	#main-about {
+		height: 4800px;
+	}
+
+	.myname {
+		font-size: 40px;
+	}
+
+}
+
+@media only screen and (max-width: 420px) {
+	#empl-edu {
+		margin-top: 145%
+	}
+
+}
+
+@media only screen and (max-width: 350px) {
+	#empl-edu {
+		margin-top: 155%
+	}
+
+	h1#titlecontent.about-header {
+		padding-top: 0;
+		margin-bottom: 20%;
+	}
+ 
 }
 
 
