--- a/src/about.css
+++ b/src/about.css
@@ -1,26 +1,20 @@
-.about-header {
-	/*border: 2px solid red;*/
-	margin-top: 15%;
-	font-size: 35px;
-	width: 80%;
-	margin: 0 auto;
-	color: white;
-	padding-top: 50px;
-	/*margin-top: 40px;*/
+#heading {
+	margin-top: 30%;
+	font-size: 55px;
+	border-bottom: cyan 3px solid;
+	display: inline-block;
+	padding: 0 20px;
 }
 
 #skills {
 	font-size: 35px;
 }
 
+
+
 #content-container {
-	/*border: 2px solid red;*/
 	margin: 0 auto;
 	justify-content: center;
-}
-
-#work-intro-content {
-	/*border: 2px solid red;*/
 }
 
 #test {
@@ -28,28 +22,20 @@
 	background-color: cyan;
 }
 
+#title.container {
+	min-height: 100vh;
+	margin-bottom: 20px;
+}
+
 .cyan {
 	color: cyan;
 }
-#dbc {
-	margin-top: -90px;
-}
-#get-in-touch {
-	/*padding-bottom: 100px;*/
-	color: cyan;
-	font-size: 55px;
-	padding: 0 35px;
-	display: inline-block;
-	text-align: center;
-	border-bottom: white 4px solid;
 
-}
 #empl-edu {
-	margin-top: 5px;
-	color: grey;
+	color: cyan;
 	padding-top: 10px;
-	border: 2px solid grey;
-	background-color: white;
+ 	margin-bottom: 5%;
+ 	border: 5px solid grey;
 }
 
 #job-title {
@@ -57,6 +43,7 @@
 	font-family: Raleway;
 	border-bottom: 3px solid cyan;
 	display: inline-block;
+	margin-top: 10%;
 }
 
 #empl-title {
@@ -64,7 +51,6 @@
 }
 #years {
 	font-size: 35px;
-	/*border-bottom: 4px solid cyan;*/
 	display: inline-block;
 	padding-left: 20px;
 	padding-right: 20px;
@@ -76,44 +62,28 @@
 	padding: 0 10px;
 	font-size: 55px;
 }
-#ace-pic {
-	/*border: 2px solid red;*/
-	max-height: 400px;
-	border: 2px solid grey;
-}
 
 #what {
-	/*border: 2px solid red;*/
 	padding: 0;
 	width: 226.78px;
 	height: 400px;
-
 }
 
 .about-pic {
 	height: 50%;
 }
 
-.thumbnail {
-	border: none;
-	padding: 0;
-	margin: 0 auto;
-}
-
-#first-img {
-	width: 450px;
-}
 
 .about-img-tag {
 	border: 4px solid grey;
 }
+
 #decorate {
 	border-bottom: 4px solid cyan;
 }
-.about-descr {
-	height: 50%;
+#about-desc {
 	padding: 20px;
-	font-size: 17px;
+	font-size: 25px;
 }
 
 #main-about {
@@ -122,136 +92,24 @@
 
 #empl-section1 {
 	color: white;
-	height: 100vh;
-	margin-top: 50px;
+	border: 2px solid grey;
+	background-color: rgb(0, 0, 0, .5);
+	padding-bottom: 10px;
+
 }
 
 
-.col-md-6 {
-}
-
-@media only screen and (max-width: 993px) {
-	#empl-edu {
-		margin-top: 55%
-	}
-
-	#first-img {
-		width: 525px;
-	}
-
-	#main-about {
-		height: 3800px;
-	}
- 
-}
-
-@media only screen and (max-width: 920px) {
-	#empl-edu {
-		margin-top: 70%
-	}
- 
-}
-
-@media only screen and (max-width: 744px) {
-	#empl-edu {
-		margin-top: 80%
-	}
- 
-}
-
-@media only screen and (max-width: 690px) {
-	#empl-edu {
-		margin-top: 85%
-	}
-
-	h1#titlecontent.about-header {
-		padding-top: 0;
-		margin-bottom: 20%;
-	}
- 
-}
-
-@media only screen and (max-width: 645px) {
-	#empl-edu {
-		margin-top: 95%
-	}
-
-	h1#titlecontent.about-header {
-		padding-top: 0;
-		margin-bottom: 20%;
-	}
- 
-}
-
-@media only screen and (max-width: 550px) {
-	#empl-edu {
-		margin-top: 105%
-	}
-
-	h1#titlecontent.about-header {
-		padding-top: 0;
-		margin-bottom: 20%;
-	}
- 
-}
-
-@media only screen and (max-width: 1205px) {
-	#first-img {
-		width: 520px;
-	}
- 
-}
 
 @media only screen and (max-width: 500px) {
 	#empl-edu {
-		margin-top: 115%
+		margin-top: 27%;
 	}
-
-	h1#titlecontent.about-header {
-		padding-top: 0;
-		margin-bottom: 20%;
+	#job-title {
+		border: 2px solid cyan;
 	}
-
-	#main-about {
-		height: 4800px;
-	}
- 
 }
 
-@media only screen and (max-width: 450px) {
-	#empl-edu {
-		margin-top: 135%
-	}
 
-	#main-about {
-		height: 4800px;
-	}
-
-	.myname {
-		font-size: 40px;
-	}
-
-}
-
-@media only screen and (max-width: 420px) {
-	#empl-edu {
-		margin-top: 220%
-	}
-		h1#titlecontent.about-header {
-		padding-top: 0;
-		margin-bottom: 20%;
-	}
-
-}
-
-@media only screen and (max-width: 350px) {
-	
-	h1#titlecontent.about-header {
-		padding-top: 0;
-		margin-bottom: 20%;
-	}
- 
-}
 
 
 
