--- a/src/about.css
+++ b/src/about.css
@@ -32,10 +32,10 @@
 }
 
 #empl-edu {
-	color: cyan;
+	color: white;
 	padding-top: 10px;
  	margin-bottom: 5%;
- 	border: 5px solid grey;
+ 	border: 5px solid cyan;
 }
 
 #job-title {
@@ -75,7 +75,7 @@
 
 
 .about-img-tag {
-	border: 4px solid grey;
+	border: 3px solid black;
 }
 
 #decorate {
@@ -92,7 +92,6 @@
 
 #empl-section1 {
 	color: white;
-	border: 2px solid grey;
 	background-color: rgb(0, 0, 0, .5);
 	padding-bottom: 10px;
 
